[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/CommandSelector.gd" type="Script" id=1]

[node name="CommandSelector" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="VBoxContainer"]
margin_right = 60.0
margin_bottom = 20.0
text = "Move"

[node name="Pickup" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
text = "Pick Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Use" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 60.0
margin_bottom = 68.0
text = "Use"

[node name="Drop" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 60.0
margin_bottom = 92.0
[connection signal="pressed" from="VBoxContainer/Move" to="." method="_on_Move_pressed"]
[connection signal="pressed" from="VBoxContainer/Pickup" to="." method="_on_Pickup_pressed"]
[connection signal="pressed" from="VBoxContainer/Use" to="." method="_on_Use_pressed"]
[connection signal="pressed" from="VBoxContainer/Drop" to="." method="_on_Drop_pressed"]
